# Valdi

./: package.json
.github/workflows/: claude-code.yml
bzl/valdi/: BUILD.bazel  valdi_compiled.bzl  valdi_config.yaml.tpl
compiler/compiler/Compiler/Sources/Generation/Swift/: SwiftCodeGenerator.swift
scripts/: claude-review.js  format-claude-output.js
valdi/: BUILD.bazel
valdi/src/valdi/runtime/: ErrorCodes.hpp  Runtime.cpp
valdi/src/valdi/runtime/JavaScript/: JSValueRefHolder.cpp  JavaScriptRuntime.cpp
valdi/src/valdi/standalone_runtime/: ValdiStandaloneMain.cpp  ValdiStandaloneMain.hpp  ValdiStandaloneRuntime.cpp  ValdiStandaloneRuntime.hpp
valdi/src/valdi/startup_benchmark/: README.md  main.cpp
valdi/testdata/resources/modules/startup_benchmark/: BUILD.bazel
valdi/testdata/resources/modules/startup_benchmark/src/: StartupBenchmark.tsx
valdi_core/src/valdi_core/cpp/Utils/: Error.cpp  Error.hpp
valdi_core/src/valdi_core/ios/swift/: ValdiMarshaller.swift
